--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.hibernate:hibernate-core:5.4.29.Final';
+    implementation 'com.oracle.ojdbc:ojdbc10:19.3.0.0'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
