--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.19.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.19.0'
 }
 
 test {
