--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.hibernate:hibernate-core:5.4.29.Final';
+    implementation 'org.hibernate:hibernate-core:5.4.29.Final'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.30'
+
+
+    //drivers
     implementation 'com.oracle.ojdbc:ojdbc10:19.3.0.0'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
     implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '9.2.1.jre11'
+
+    //testing
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
