-Implemented Java Faker library -Created NameGeneration class

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.30'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 
 
     //drivers
