--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.30'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 
     //drivers
