--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ configurations {
 
 
 dependencies {
+    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
