--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.7.0")
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.19.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.19.0'
 }
